Bug 399673 - importer file selector does not show QIF files and does not remember last import directory
Summary: importer file selector does not show QIF files and does not remember last imp...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: importer (other bugs)
Version First Reported In: 5.0.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-11 17:55 UTC by rustonm2005
Modified: 2018-10-12 22:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description rustonm2005 2018-10-11 17:55:13 UTC
SUMMARY
When selecting a file to import the file selection screen defaults to "Import Files" and does not show ".QIF" files. It does show ".qif" files....lower case.
As a result, user has to switch to "All Files" view,

In addition, when navigating to the directory location of the file to import.....when importing another file.....the previous location is not remembered. User has to navigate to the location again.

STEPS TO REPRODUCE
1. Select "File" -> "Import" -> "QIF"
2. Select "Browse"
3. Navigate to location of ".QIF" file

OBSERVED RESULT
4. File is not shown


EXPECTED RESULT
4. File should be shown


SOFTWARE VERSIONS
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Thomas Baumgart 2018-10-12 14:28:30 UTC
Git commit 9561996cdb0188bd7d8eba176ea45f1d7fac91cd by Thomas Baumgart.
Committed on 12/10/2018 at 14:28.
Pushed by tbaumgart into branch '5.0'.

Fix QIF import file selection dialog

When selecting a file to import the file selection screen defaults to
"Import Files" and does not show ".QIF" files. It does show ".qif"
files....lower case. As a result, user has to switch to "All Files"
view.

In addition, when navigating to the directory location of the file to
import.....when importing another file.....the previous location is not
remembered. User has to navigate to the location again.

This change fixes the above mentioned problems. For existing user
defined profiles, the filter may be amended to contain "*.qif *.QIF" to
show lower and uppercase filenames using the QIF import plugin settings
dialog.

M  +1    -1    kmymoney/plugins/qif/config/mymoneyqifprofile.cpp
M  +8    -10   kmymoney/plugins/qif/import/kimportdlg.cpp

https://commits.kde.org/kmymoney/9561996cdb0188bd7d8eba176ea45f1d7fac91cd
Comment 2 rustonm2005 2018-10-12 22:22:13 UTC
checked out compiled and tested. looks good. many thanks!.